--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="css/icons.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;700;900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,24 +25,27 @@
             <nav class="nav">
               <a href="#" class="nav__link">HOME</a>
               <a href="#about" class="nav__link">ABOUT</a>
-              <a href="#" class="nav__link">SERVICES</a>
+              <a href="services" class="nav__link">SERVICES</a>
               <a href="#" class="nav__link">GALLERY</a>
               <a href="#blog" class="nav__link">BLOG</a>
-              <a href="#" class="nav__link">CONTACT</a>
+              <a href="contact" class="nav__link">CONTACT</a>
             </nav>
           </div>
         </div>
         <div class="section__content">
           <div class="row">
             <div class="col-4">
-              <h1 class="section__title section__title--primary">Fresh Life</h1>
-              <p class="section__description section__description--dark">Sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad
-                minim
-                veniam,
-                quis nostrud
-                exercitation ullamco.</p>
-              <button class="button button--primary">GET FREE NOW</button>
+              <h1 class="section__title section__title--primary">
+                Fresh Life
+              </h1>
+              <p class="section__description section__description--dark">
+                Sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim adminim veniam,
+                quis nostrud exercitation ullamco.
+              </p>
+              <button class="button button--primary">
+                GET FREE NOW
+              </button>
             </div>
           </div>
         </div>
@@ -55,7 +59,9 @@
             <img src="images/img.png" alt="fruits">
           </div>
           <div class="col-6">
-            <h2 class="section__title section__title--secondary">About Us</h2>
+            <h2 class="section__title section__title--secondary">
+              About Us
+            </h2>
             <p class="section__description section__description--light">
               Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
@@ -68,13 +74,48 @@
         </div>
       </div>
     </section>
+    <!-- section service -->
+    <section class="section section--service" id="services">
+      <div class="container">
+        <div div class="row">
+          <div class="col-6 justify-content-center service--list">
+            <div class="service--list-item col-8">
+              <span>Online Shopping</span>
+              <i class="icon-basket"></i>
+            </div>
+            <div class="service--list-item col-8">
+              <span>Quality Product</span>
+              <i class="icon-hand"></i>
+            </div>
+            <div class="service--list-item col-8">
+              <span>Domestic & International Delivery</span>
+              <i class="icon-earth"></i>
+            </div>
+            <div class="service--list-item col-8">
+              <span>Well Organized</span>
+              <i class="icon-carrot"></i>
+            </div>
+          </div>
+          <div class="col-6 service__second-block">
+            <img class="col-9 align-self-end" src="images/tomato.png" alt="tomato">
+            <h2 class="section__title section__title--secondary section__title--service">
+              Our Services
+            </h2>
+          </div>
+        </div>
+      </div>
+    </section>
  
     <!-- section my blog -->
     <section class="section section--blog" id="blog">
       <div class="container">
-        <h2 class="section__title--blog">Blog</h2>
-        <p class="section__subtitle">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-          ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+        <h2 class="section__title--blog">
+          Blog
+        </h2>
+        <p class="section__subtitle">
+          Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+          ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
+        </p>
         <div class="row">
           <div class="col-4">
             <a href="" class="link">
@@ -127,6 +168,51 @@
         </div>
       </div>
     </section>
+    <!-- section contacts -->
+    <section class="section section__contact" id="contact">
+      <div>
+        <h2 class="section__contact--title">
+          Contact
+        </h2>
+        <p class="section__contact--description">
+          For new projects, ideas, business or anything
+          you'd like to discuss, contact with me!
+        </p>
+      </div>
+      <div div class="row justify-content-center">
+        <div class="col-5 contact__form">
+          <input class="contact__form--input" placeholder="Auskteez Tran">
+          <input class="contact__form--input" placeholder="Your email...">
+          <input class="contact__form--input" placeholder="Your phone number...">
+          <textarea class="contact__form--textarea" placeholder="Your messge..."></textarea>
+        </div>
+        <div class="col-3">
+          <div class="contact__contact--information">
+            <h4>Address</h4>
+            <span>123 City name, Street, City, Country</span>
+          </div>
+          <div class="contact__contact--information">
+            <h4>Email</h4>
+            <span>cahee@domain.com</span>
+          </div>
+          <div class="contact__contact--information">
+            <h4>Phone</h4>
+            <span>+012 345 6789</span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="section section__footer">
+      <div class="section__footer--block">
+        <span class="section__footer--copyright">
+          &#169 2015 Company. All right reserved.
+        </span>
+        <img src="images/logo-small.png" alt="logo">
+        <span class="section__footer--copyright">
+          Made with <span>love</span> by Auskteez
+        </span>
+      </div>
+    </footer>
   </main>
 </body>
 
