--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Cahee</title>
   <link rel="stylesheet" href="css/icons.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;700;900&display=swap" rel="stylesheet">
@@ -25,10 +25,11 @@
             <nav class="nav">
               <a href="#" class="nav__link">HOME</a>
               <a href="#about" class="nav__link">ABOUT</a>
-              <a href="services" class="nav__link">SERVICES</a>
-              <a href="#" class="nav__link">GALLERY</a>
+              <a href="#services" class="nav__link">SERVICES</a>
+              <a href="#gallery" class="nav__link">GALLERY</a>
+              <a href="#subscribe" class="nav__link">SUBSCRIBE</a>
               <a href="#blog" class="nav__link">BLOG</a>
-              <a href="contact" class="nav__link">CONTACT</a>
+              <a href="#contact" class="nav__link">CONTACT</a>
             </nav>
           </div>
         </div>
@@ -63,12 +64,14 @@
               About Us
             </h2>
             <p class="section__description section__description--light">
-              Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-              aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
+              Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud 
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
             </p>
             <p class="section__description section__description--light">
-              Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-              laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.
+              Nim id est laborum. Sed ut perspiciatis unde omnis iste natus 
+              error sit voluptatem accusantium doloremque laudantium, 
+              totam rem aperiam, eaque ipsa quae ab illo inventore.
             </p>
           </div>
         </div>
@@ -105,16 +108,84 @@
         </div>
       </div>
     </section>
- 
-    <!-- section my blog -->
+    <!-- section gallery -->
+  <section class="section section--gallery" id="gallery">
+    <div class="container">
+      <h2 class="title title--secondary">
+        Gallery
+      </h2>
+      <p class="subtitle subtitle--secondary">
+        Consectetur adipisicing elit, sed do eiusmod tempor incididunt 
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
+        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+      <div class="gallary__list">
+        <div class="row">
+          <div class="col-8">
+            <div class="gallary__item">
+              <img src="images/gal-1.png" alt="food">
+            </div>
+          </div>
+          <div class="col-4 two--items--col">
+            <div class="gallary__item">
+              <img src="images/gal-2.png" alt="food">
+            </div>
+            <div class="gallary__item">
+              <img src="images/gal-3.png" alt="food">
+            </div>
+          </div>
+          <div class="col-6 two--items--col-6">
+            <div class="gallary__item">
+              <img src="images/gal-4.png" alt="food">
+            </div>
+          </div>
+          <div class="col-6 two--items--col-6">
+            <div class="gallary__item">
+              <img src="images/gal-5.png" alt="food">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="gallery__button">
+      View more
+    </button>
+  </section>
+  <!-- section subscribe -->
+  <section class="section section--subscribe" id="subscribe">
+    <div class="container">
+      <div class="row">
+        <div class="col-8">
+          <h4 class="subscribe__title">Subscribe To Us</h4>
+          <p class="subscribe__subtitle">
+            Dolor sit amet, consectetur adipisicing elit, 
+            sed do eiusmod tempor incididunt ut labore et 
+            dolore magna aliqua. Ut enim ad minim veniam.
+          </p>
+          <div class="row">
+            <div  class="col-9">
+              <input class="subscribe-input" placeholder="Your email address..." type="email">
+            </div>
+            <div class="col-3">
+              <button class="subscribe-button">
+                Subscribe
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- section my blog -->
     <section class="section section--blog" id="blog">
       <div class="container">
         <h2 class="section__title--blog">
           Blog
         </h2>
         <p class="section__subtitle">
-          Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-          ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
+          Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+          Duis aute irure dolor in reprehenderit in voluptate velit.
         </p>
         <div class="row">
           <div class="col-4">
